<resources>
    <string name="app_name">AAD Practice</string>
    <string name="leader_board_activity">LEADERBOARD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="please_wait">Please Wait</string>
    <string name="back_button">Back Button</string>
    <string name="gads_banner">Gads Banner</string>
    <string name="gads_splash">Gads Splash</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_project_on_github_link">Project on GITHUB (link)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_are_you_sure">Are You Sure</string>
    <string name="yes">Yes</string>
    <string name="label_submission_successful">Submission Successful</string>
    <string name="label_submission_failed">Submission Unsuccessful</string>
    <string name="submitting_project">Submitting Project</string>
</resources>