<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".SubmitActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/gadsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/gadsHeader"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="?actionBarSize"
        android:layout_marginEnd="?actionBarSize"
        android:contentDescription="@string/gads_banner"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton"
        app:srcCompat="@drawable/gads" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/project_submission"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/gadsHeader"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/gadsHeader" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/line_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <EditText
        android:id="@+id/editTextFirstName"
        style="@style/HintStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_40"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/HintStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_40"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        style="@style/HintStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextGithubLink"
        style="@style/HintStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_40"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/hint_project_on_github_link"
        android:inputType="textWebEditText"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmission"
        style="@style/SubmitButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/colorAccent"
        android:text="Submit"
        app:layout_constraintEnd_toEndOf="@+id/editTextGithubLink"
        app:layout_constraintStart_toStartOf="@+id/editTextGithubLink"
        app:layout_constraintTop_toBottomOf="@+id/editTextGithubLink" />

    <ProgressBar
        android:id="@+id/progressBarSubmit"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/submitting_project"
        android:textSize="@dimen/dimen_font_18"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarSubmit" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupSubmitProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="textView4,progressBarSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>